--- a/document-api/Cargo.toml
+++ b/document-api/Cargo.toml
@@ -14,3 +14,7 @@ serde_derive = "1.0"
 version = "*"
 default-features = false
 features = ["json"]
+
+[global.limits]
+forms = 131072
+json = 5242880
