--- a/document-api/Cargo.toml
+++ b/document-api/Cargo.toml
@@ -9,6 +9,7 @@ rocket_codegen = "0.3.6"
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
+reqwest = "0.8.5"
 
 [dependencies.rocket_contrib]
 version = "*"
